cluster/redcloud/apps/unifi-network-application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-network-application
  namespace: unifi-network-application
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: unifi-network-application
  template:
    metadata:
      labels:
        app: unifi-network-application
    spec:
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 300
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 300
      containers:
        - name: unifi
          image: lscr.io/linuxserver/unifi-network-application:10.4.57-ls134
          ports:
            - containerPort: 8443
          resources:
            requests:
              cpu: 600m
              memory: 960Mi
            limits:
              cpu: 1200m
              memory: 1.8Gi
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: unifi-config-pvc
