cluster/redcloud/apps/unifi-network-application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-network-application
  namespace: unifi-network-application
spec:
  selector:
    app: unifi-network-application
  ports:
    - name: https
      port: 8443
      targetPort: 8443
    - name: controller
      port: 8080
      targetPort: 8080
    - name: captive-portal
      port: 8880
      targetPort: 8880
    - name: stun
      port: 3478
      targetPort: 3478
      protocol: UDP
    - name: ap-discovery
      port: 10001
      targetPort: 10001
      protocol: UDP
