cluster/redcloud/apps/unifi-network-application/ingress-tcp-udp.yaml
# 8080 TCP
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: unifi-8080
  namespace: unifi-network-application
spec:
  entryPoints:
    - unifi8080
  routes:
    - match: HostSNI(`*`)
      services:
        - name: unifi-network-application
          port: 8080

---
# 8880 TCP
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: unifi-8880
  namespace: unifi-network-application
spec:
  entryPoints:
    - unifi8880
  routes:
    - match: HostSNI(`*`)
      services:
        - name: unifi-network-application
          port: 8880
